--- a/mbed_app.json
+++ b/mbed_app.json
@@ -5,12 +5,12 @@
             "help": "Turns AT command trace on/off from the cellular modem, defaults to off",
             "value": false
         },
-        "sim-pin-code": {
-            "help": "SIM PIN code",
-            "value": "\"1234\""
+        "cellular_sim_pin": {
+	        "help": "Default sim pin",
+	        "value": "\"1234\""
         },
-        "apn": {
-            "help": "The APN string to use for this SIM/network, set to 0 if none",
+        "cellular_apn": {
+            "help": "Access point name, e.g. internet",
             "value": "\"internet\""
         },
         "username": {
@@ -20,6 +20,15 @@
         "password": {
             "help": "The password string to use for this APN, set to 0 if none",
             "value": 0
+        },
+        "network-interface":{
+            "help": "Options are ETHERNET,CELLULAR",
+            "value": "CELLULAR"
+        },
+        "trace-level": {
+            "help": "Options are TRACE_LEVEL_ERROR,TRACE_LEVEL_WARN,TRACE_LEVEL_INFO,TRACE_LEVEL_DEBUG",
+            "macro_name": "MBED_TRACE_MAX_LEVEL",
+            "value": "TRACE_LEVEL_INFO"
         }
 	},
     "target_overrides": {
