Now example works with old and new cellular framworks. Old example needs to configure APN in mbed_app.json until ppp set apn_lookup as default.

--- a/mbed_app.json
+++ b/mbed_app.json
@@ -2,7 +2,7 @@
     "config": {
         "sock-type": "UDP",
         "network-interface":{
-            "help": "Options are ETHERNET,CELLULAR",
+            "help": "Options are ETHERNET,CELLULAR,CELLULAR_ONBOARD",
             "value": "CELLULAR"
         },
         "trace-level": {
@@ -17,7 +17,7 @@
         "modem_trace": {
             "help": "Turns AT command trace on/off from the cellular modem, defaults to off",
             "value": false
-        }        
+        }
 	},
     "target_overrides": {
         "*": {
